--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lucide-react": "^0.300.0",
     "next": "14.1.0",
     "pg": "^8.17.2",
+    "postgres": "^3.4.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recharts": "^3.7.0",
