--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "date-fns": "^3.0.0",
     "dotenv": "^17.2.3",
     "lucide-react": "^0.300.0",
-    "next": "14.1.0",
+    "next": "^16.2.0-canary.16",
     "pg": "^8.17.2",
     "postgres": "^3.4.8",
     "react": "^18.2.0",
